2009-09-07  Glenn Morris  <rgm@gnu.org>

	* files.el (auto-mode-alist): Use delphi-mode for .dpr files.

2009-09-06  Nick Roberts  <nickrob@snap.net.nz>

	* vc-git.el (vc-git-annotate-command): Use separator to parse
	arguments correctly.

2009-09-06  Eli Zaretskii  <eliz@gnu.org>

	* proced.el (proced-mode): Doc fix.

2009-09-06  Julian Scheid  <julians37@gmail.com>  (tiny change)

	* net/tramp.el (tramp-perl-file-attributes): Print "nil" when
	lstat fails.
	(tramp-do-file-attributes-with-ls): Check for file existence at
	remote end.
	(tramp-do-file-attributes-with-stat): Likewise.
	(tramp-convert-file-attributes): Return nil when attr is nil.

2009-09-05  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-entry): Add help-echo and follow-link
	properties to this button.
	(diary-fancy-display): Don't extend the button to the final newline.
	(diary-fancy-display-mode): Continue to define "q" as a local key.

	* calendar/cal-china.el (holiday-chinese): Make it slightly more
	efficient.

	* font-lock.el (lisp-font-lock-keywords-2): Add letf.

	* emacs-lisp/bytecomp.el (emacs-lisp-file-regexp): Doc fix.
	(byte-compile-dest-file-function): New option.
	(byte-compile-dest-file): Doc fix.
	Obey byte-compile-dest-file-function.
	(byte-compile-cl-file-p): New function.
	(byte-compile-eval): Only suppress noruntime warnings about cl functions
	if the cl-functions warning is enabled.  Use byte-compile-cl-file-p.
	(byte-compile-eval): Check for non-nil byte-compile-cl-functions rather
	than for file being previously loaded.
	(byte-compile-find-cl-functions): Use byte-compile-cl-file-p.
	(byte-compile-file-form-require): Handle the case where requiring a file
	indirectly causes CL to be loaded.

2009-09-05  Karl Fogel  <kfogel@red-bean.com>

	* files.el (find-alternate-file): Run `kill-buffer-hook' manually
	before killing the old buffer, since by the time `kill-buffer' is
	run so many buffer variables have been set to nil that it may not